suppression de themes et ajout gitignore

--- a/content/peintures/006-ete.md
+++ b/content/peintures/006-ete.md
@@ -10,7 +10,7 @@ type: "Huile sur toile"
 status: "En vente"
 ---
 
-Claude Monet, L'été, 1874, Alte Nationalgalerie à Berlin
+Copie du tableau "L'été" de Claude Monet, 1874. Original visible au Alte Nationalgalerie à Berlin.
 
 ![](/img/006/tableau.jpg)
 *Huile sur toile*
