--- a/content/peintures/006-ete.md
+++ b/content/peintures/006-ete.md
@@ -7,7 +7,7 @@ featured_image: "/img/006/tableau.jpg"
 size: "33x41 cm"
 price: "40 €"
 type: "Huile sur toile"
-status: "En vente"
+status: "Indisponible"
 ---
 
 Copie du tableau "L'été" de Claude Monet, 1874. Original visible au Alte Nationalgalerie à Berlin.
